[package]
name = "rive-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
etagere = "0.2.8"
rive-rs = { git = "https://github.com/rive-app/rive-rs", features = ["vello"] }
vello = { git = "https://github.com/linebender/vello", rev = "ee3a076" }

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
