[package]
name = "rive-bevy"
description = "Rive Bevy plugin"
version = "0.1.0"
edition = "2021"
authors = ["Dragoș Tiselice <dragos@rive.app>"]
homepage = "https://rive.app/"
repository = "https://github.com/rive-app/rive-bevy"
documentation = "https://help.rive.app/game-runtimes/bevy"
keywords = ["rive", "bevy", "plugin", "ui", "animation"]
categories = ["game-development"]
license = "MIT"
readme = "../README.md"

[features]
default = []

[dependencies]
bevy = "0.13.0"
etagere = "0.2.8"

vello = "0.1.0"
rive-rs = { path = "../rive-rs/rive-rs", features = ["vello"] }


[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
